Add rcov coverage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li><a href=doc>API Docs</a></li>
     <li><a href=http://github.com/jarib/watir-webdriver>Source</a></li>
+    <li><a href=coverage>RCov</a></li>
   </ul>
   <p class="footer">Think this page is ugly? Fork <a href=http://github.com/jarib/watir-webdriver/tree/gh-pages>the page</a> and make it better!</p>
 </body>
