--- a/spec/html/wait.html
+++ b/spec/html/wait.html
@@ -8,6 +8,12 @@
 	       document.getElementById(id).style.display = display;
 	    }, timeout);
         }
+        function setTimeoutRemove(id, timeout) {
+	    setTimeout(function() {
+	       var e = document.getElementById(id);
+	       e.parentNode.removeChild(e);
+	    }, timeout);
+        }
     </script>
   </head>
   
@@ -16,5 +22,6 @@
     <div id="bar" style="display:none;">bar</div>
     <a id="show_bar" href="#" onclick="setTimeoutDisplay('bar', 'block', 500);">show bar</a>
     <a id="hide_foo" href="#" onclick="setTimeoutDisplay('foo', 'none', 500);">hide foo</a>
+    <a id="remove_foo" href="#" onclick="setTimeoutRemove('foo', 500);">remove foo</a>
   </body>
 </html>
