--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
   <title>watir-webdriver</title>
   <style type="text/css" media="screen">
     body { padding-left: 10px;}
@@ -16,7 +16,7 @@
   <ul>
     <li><a href=doc>API Docs</a></li>
     <li><a href=http://github.com/jarib/watir-webdriver>Source</a></li>
-    <li><a href=coverage>RCov</a></li>
+    <li><a href=coverage>Coverage</a></li>
   </ul>
   <p class="footer">Think this page is ugly? Fork <a href=http://github.com/jarib/watir-webdriver/tree/gh-pages>the page</a> and make it better!</p>
 </body>
