Fix broken spec (found by native events).

--- a/spec/html/keylogger.html
+++ b/spec/html/keylogger.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-     <div id="receiver" onkeypress="log(this)">Receiver</div>
+     <input type="text" id="receiver" onkeydown="log(this)">
      <div id="output"></div>
   </body>
 </html>
