--- a/spec/html/clicks.html
+++ b/spec/html/clicks.html
@@ -12,5 +12,8 @@
   <body>
     <div id="click-logger">click me</div>
     <div id="log"></div>
+    <div>
+      <div onclick="this.innerHTML = 'You Clicked It!'" style="color: red; text-decoration: underline; cursor: pointer;">Can You Click This?</div>
+    </div>
   </body>
 </html>
