--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <li><a href=doc>API Docs</a></li>
     <li><a href=http://github.com/jarib/watir-webdriver>Source</a></li>
     <li><a href=coverage>Coverage</a></li>
+    <li>New Link!</li>
   </ul>
   <p class="footer">Think this page is ugly? Fork <a href=http://github.com/jarib/watir-webdriver/tree/gh-pages>the page</a> and make it better!</p>
 </body>
