Replace Rack server with TCPServer for WatirSpec

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -127,7 +127,7 @@
         </fieldset>
     </form>
     <h2>Delete user</h2>
-    <form id="delete_user" action="tables.html">
+    <form id="delete_user" action="tables.html" method="POST">
         <fieldset>
             <label for="delete_user_username">Username</label>
             <select name="delete_user_username" id="delete_user_username">
