--- a/spec/watirspec/html/nested_iframes.html
+++ b/spec/watirspec/html/nested_iframes.html
@@ -6,4 +6,8 @@
   <h3>Top Layer</h3>
   <iframe id="one" src="nested_frame_1.html"></iframe>
   <iframe id="two" src="nested_iframe_2.html"></iframe>
+
+  <div id="div1">
+    <div id="div2"></div>
+  </div>
 </html>
