support for locating on multiple classes with :class parameter

--- a/spec/watirspec/html/class_locator.html
+++ b/spec/watirspec/html/class_locator.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <div class="a">a</div>
+    <div class="a b c">a b c</div>
     <div class="a b">a b</div>
     <div class="abc">abc</div>
   </body>
