handle adjacent location in selector builder

--- a/spec/watirspec/html/nested_elements.html
+++ b/spec/watirspec/html/nested_elements.html
@@ -8,7 +8,7 @@
 <body>
 <span id="grandparent_span">
         <div id="grandparent">
-            <span id="parent_span">
+            <span class="parent" id="parent_span">
                 <div id="parent">
                     <div id="first_sibling">
                         <span id="child_span">
@@ -22,10 +22,10 @@
                             <div id="youngest_child"></div>
                         </span>
                     </div>
-                    <span id="between_siblings1"></span>
-                    <div id="second_sibling"></div>
-                    <span id="between_siblings2"></span>
-                    <div id="third_sibling"></div>
+                    <span class="a" id="between_siblings1"></span>
+                    <div class="b" id="second_sibling"></div>
+                    <span class="a" id="between_siblings2"></span>
+                    <div class="a b" id="third_sibling">text</div>
                 </div>
             </span>
         </div>
