fix attribute location bug

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -91,14 +91,14 @@
         </fieldset>
         <fieldset>
             <legend>Interests</legend>
-            <input type="checkbox" name="new_user_interests" id="new_user_interests_books" value="books" checked="checked" /> <label for="new_user_interests_books">Books</label>
-            <input type="checkbox" name="new_user_interests" value="bowling" /> <label>Bowling</label>
-            <input type="checkbox" name="new_user_interests" id="new_user_interests_cars" value="cars" /> <label for="new_user_interests_cars">Cars</label>
-            <input type="checkbox" name="new_user_interests" id="new_user_interests_dancing" value="dancing" class="fun" title="Dancing is fun!" /> <label for="new_user_interests_dancing">Dancing</label>
-            <input type="checkbox" name="new_user_interests" id="new_user_interests_dentistry" value="dentistry" disabled="disabled" /> <label for="new_user_interests_dentistry">Dentistry</label>
+            <input type="checkbox" tabindex="1" name="new_user_interests" id="new_user_interests_books" value="books" checked="checked" /> <label for="new_user_interests_books">Books</label>
+            <input type="checkbox" tabindex="2" name="new_user_interests" value="bowling" /> <label>Bowling</label>
+            <input type="checkbox" tabindex="3" name="new_user_interests" id="new_user_interests_cars" value="cars" /> <label for="new_user_interests_cars">Cars</label>
+            <input type="checkbox" tabindex="4" name="new_user_interests" id="new_user_interests_dancing" value="dancing" class="fun" title="Dancing is fun!" /> <label for="new_user_interests_dancing">Dancing</label>
+            <input type="checkbox" tabindex="5" name="new_user_interests" id="new_user_interests_dentistry" value="dentistry" disabled="disabled" /> <label for="new_user_interests_dentistry">Dentistry</label>
             <input type="hidden" name="new_user_interests" id="new_user_interests_dolls" value="dolls" class="fun" />
-            <input type="checkbox" id="new_user_interests_food" value="food" /> <label for="new_user_interests_food">Food</label>
-            <input type="CHECKBOX" id="new_user_interests_draw" value="Draw" /> <label for="new_user_interests_draw">Draw</label>
+            <input type="checkbox" tabindex="6" id="new_user_interests_food" value="food" /> <label for="new_user_interests_food">Food</label>
+            <input type="CHECKBOX" tabindex="7" id="new_user_interests_draw" value="Draw" /> <label for="new_user_interests_draw">Draw</label>
         </fieldset>
         <fieldset>
             <legend>Preferences</legend>
