--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -115,6 +115,8 @@
             <label for="new_user_newsletter_probably">Probably</label>
             <input type="radio" name="new_user_newsletter" id="new_user_newsletter_nah" value="nah" disabled="disabled" />
             <label for="new_user_newsletter_nah">Nah</label>
+            <input type="radio" id="new_user_newsletter_none" value="none" disabled="disabled" />
+            <label for="new_user_newsletter_none">None</label>
         </fieldset>
         <fieldset>
             <legend>Actions</legend>
