update select list specs and get everything passing

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -49,8 +49,8 @@
             <label for="new_user_languages">Languages</label>
             <select name="new_user_languages" id="new_user_languages" multiple="multiple" onchange="WatirSpec.addMessage('changed language');">
                 <option id="danish" value="1">Danish</option>
-                <option selected="selected" value="2">English</option>
-                <option selected="selected" value="3">Norwegian</option>
+                <option selected="selected" value="2" label="EN">English</option>
+                <option selected="selected" value="3" label="NO">Norwegian</option>
                 <option value="4" disabled>Russian</option>
                 <option>Swedish</option>
             </select> <br />
