--- a/spec/watirspec/html/non_control_elements.html
+++ b/spec/watirspec/html/non_control_elements.html
@@ -110,7 +110,7 @@
             <span class="footer" onclick="this.innerHTML = 'This is a footer with text set by Javascript.'">This is a footer.</span>
         </div>
         <a href="strip_space ">Space should be stripped from href</a>
-        <div id="hidden" style="display: none;">Not shown</div>
+        <div id="shown"><div id="hidden" style="display: none;">Not shown</div><div>Not hidden</div></div>
     </div>
 
     <div id="messages"></div>
