Select exact matches when using Select#select_by! with String

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -53,6 +53,8 @@
                 <option selected="selected" value="3" label="NO">Norwegian</option>
                 <option value="4" disabled>Russian</option>
                 <option>Swedish</option>
+                <option>Azeri - Latin</option>
+                <option>Latin</option>
             </select> <br />
             <label for="new_user_portrait">Portrait</label>
             <input type="file" name="new_user_portrait" id="new_user_portrait" class="portrait" title="Smile!" onchange="WatirSpec.addMessage(this.value)" /> <br />
