allow location of elements using custom attributes

--- a/spec/watirspec/html/non_control_elements.html
+++ b/spec/watirspec/html/non_control_elements.html
@@ -130,6 +130,6 @@
       <del></del>
       <del class="footer" onclick="this.innerHTML = 'This is a del with text set by Javascript.'">This is a del.</del>
     </div>
-
+    <div custom-attribute=custom>Custom</div>
   </body>
 </html>
