Locate elements by visible text

--- a/spec/watirspec/html/non_control_elements.html
+++ b/spec/watirspec/html/non_control_elements.html
@@ -131,5 +131,10 @@
       <del class="footer" onclick="this.innerHTML = 'This is a del with text set by Javascript.'">This is a del.</del>
     </div>
     <div custom-attribute=custom>Custom</div>
+    <div id="visible_text">
+			<a id="all_visible_text">all visible</a>
+			<a id="some_visible_text">some visible<span style="display:none;"> some hidden</span></a>
+			<a id="no_visible_text" style="display:none;">none visible</a>
+		</div>
   </body>
 </html>
