simplify location code and better differentiate locating by Selenium vs Watir strategies

--- a/spec/watirspec/html/multiple_ids.html
+++ b/spec/watirspec/html/multiple_ids.html
@@ -8,6 +8,7 @@
 
 <body>
   <div id="multiple" class="foo"></div>
+  <span id="multiple" class="foobar"></span>
   <div id="multiple" class="bar"></div>
   
 </body>
