Updated flash function - Now flashes faster - Element will end up with the same color it started - Add spec that BG color should stay the same after flashing

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -10,7 +10,7 @@
   <body onload="document.user_new.new_user_first_name.focus()">
     <div id="messages"></div>
     <h1><a href="">User administration</a></h1>
-    <h2>Add user</h2>
+    <h2 style="background-color: gray;">Add user</h2>
     <form enctype="multipart/form-data" action="post_to_me" method="post" name="user_new" id="new_user" class="user" onsubmit="WatirSpec.addMessage('submit'); return false;">
         <fieldset>
             <input type="hidden" /> <!-- Ensure it's not included in #text_field -->
