fix bug for waiting for text_field to be displayed

--- a/spec/watirspec/html/wait.html
+++ b/spec/watirspec/html/wait.html
@@ -68,6 +68,9 @@
       <a id="add_select" name="add_select" href="#" onclick="setTimeoutDisplay('languages', 'block', 500);">show select list</a>
     </div>
     <form>
+      <label for="textfield">Not Displayed Yet</label>
+      <input type="textfield" title="Text Displayed" name="textfield" id="textfield" style="display:none;" /> <br  />
+      <a id="show_textfield" href="#" onclick="setTimeoutDisplay('textfield', 'block', 2000);">show textfield</a>
       <fieldset>
         <select name="languages" id="languages", style="display: none">
           <option id="danish" value="1">Danish</option>
