--- a/spec/watirspec/html/wait.html
+++ b/spec/watirspec/html/wait.html
@@ -41,6 +41,12 @@
         }, timeout);
       }
 
+      function makeWritable(id, timeout) {
+          setTimeout(function() {
+              document.getElementById(id).removeAttribute('readonly');
+          }, timeout);
+      }
+
       function changeName(id) {
           document.getElementById(id).name = 'different';
       }
@@ -71,6 +77,9 @@
       <label for="textfield">Not Displayed Yet</label>
       <input type="textfield" title="Text Displayed" name="textfield" id="textfield" style="display:none;" /> <br  />
       <a id="show_textfield" href="#" onclick="setTimeoutDisplay('textfield', 'block', 2000);">show textfield</a>
+      <label for="writable">Not Writable</label>
+      <input type="text" title="Not Writable" name="writable" id="writable" readonly/> <br  />
+      <a id="make-writable" onclick="makeWritable('writable', 2000);">Make Writable</a>
       <fieldset>
         <select name="languages" id="languages", style="display: none">
           <option id="danish" value="1">Danish</option>
