allow content editable elements to use Watir's user editable methods

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -161,6 +161,8 @@
   <div id="wants_newsletter" style="display: none;"></div>
   <div id="onfocus_test"></div>
 
+  <div id="contenteditable" contenteditable="true">Foo</div>
+
   <!-- option disappears onchange -->
   <select id="obsolete" onchange="this.innerHTML = '';">
     <option value="norway">norway</option>
