Watir::Element - Add #attribute_values and #attribute_list.

--- a/spec/watirspec/html/data_attributes.html
+++ b/spec/watirspec/html/data_attributes.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <p data-type=ruby-library>watir</p>
+    <div data-type=description data-type_$p3c!a1=special-description>It is amazing!</div>
   </body>
 </html>
