adds Element#classes

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -8,7 +8,7 @@
     <script src="javascript/helpers.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body onload="document.user_new.new_user_first_name.focus()">
-    <div id="messages"></div>
+    <div id="messages" class="multiple classes here"></div>
     <h1><a href="">User administration</a></h1>
     <h2 style="background-color: gray;">Add user</h2>
     <form enctype="multipart/form-data" action="post_to_me" method="post" name="user_new" id="new_user" class="user" onsubmit="WatirSpec.addMessage('submit'); return false;">
