More specs and removal of inaccessible code

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -78,6 +78,8 @@
             <input type="week" id="html5_week" name="html5_week" />
             <label for="html5_time">HTML5 Time</label>
             <input type="time" id="html5_time" name="html5_time" />
+            <label for="number">Age</label>
+            <input type="number" value="42" name="number" id="number">
         </fieldset>
         <fieldset>
             <legend>Login information</legend>
