--- a/spec/watirspec/html/nested_elements.html
+++ b/spec/watirspec/html/nested_elements.html
@@ -7,11 +7,11 @@
 
 <body>
     <span id="grandparent_span">
-        <div id="grandparent">
-            <span class="parent" id="parent_span">
-                <div id="parent">
-                    <div id="first_sibling">
-                        <span id="child_span">
+        <div id="grandparent" class="ancestor" data-locator="grandparent">
+            <span class="parent" class="ancestor" id="parent_span" data-locator="grandparent span">
+                <div id="parent" class="ancestor" data-locator="parent">
+                    <div id="first_sibling" data-locator="first sibling">
+                        <span id="child_span" data-locator="child span">
                             <div id="oldest_child">
                                 <span id="grandson_span">
                                     <div id="first_grandson"></div>
@@ -22,10 +22,10 @@
                             <div id="youngest_child"></div>
                         </span>
                     </div>
-                    <span class="a" id="between_siblings1"></span>
-                    <div class="b" id="second_sibling"></div>
-                    <span class="a" id="between_siblings2"></span>
-                    <div class="a b" id="third_sibling">text</div>
+                    <span class="a" id="between_siblings1" data-locator="between_siblings1"></span>
+                    <div class="b" id="second_sibling" data-locator="second_sibling">Second</div>
+                    <span class="a" id="between_siblings2" data-locator="between_siblings2"></span>
+                    <div class="a b" id="third_sibling" data-locator="third_sibling">Third</div>
                 </div>
             </span>
         </div>
