--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -131,7 +131,8 @@
             <input type="reset" name="new_user_reset" id="new_user_reset" value="Reset" data-locator="reset" />
             <input type="button" name="new_user_button" id="new_user_button" data-locator="new user" alt="Create a new user" value="Button" onclick="this.value = 'new_value_set_by_onclick_event'" />
             <input type="BuTTon" name="new_user_button_preview" id="new_user_button_preview" alt="Create a new user" value="Preview" data-locator="preview"/>
-            <button name="new_user_button_2" value="button_2" data-locator="Benjamin">Button 2</button>
+            <button name="new_user_button_2" type="submit" value="button_2" data-locator="Benjamin">Button 2</button>
+            <button name="new_user_button_3" value="button_3" data-locator="No Type">Button 3</button>
             <input type="image" class="image" name="new_user_image" src="images/button.png" alt="Submittable button" data-locator="submittable button"/>
             <input type="submit" name="new_user_submit_disabled" id="disabled_button" value="Disabled" disabled="disabled" data-locator="disabled" />
             <input type="checkbox" name="new_user_submit_disabled" id="toggle_button_checkbox" onclick="var elem = document.getElementById('disabled_button'); elem.disabled = !elem.disabled" />
