add support for index by XPath on all elements

--- a/spec/watirspec/html/tables.html
+++ b/spec/watirspec/html/tables.html
@@ -80,7 +80,7 @@
                     Table 1, Row 1, Cell 2
                 </td>
             </tr>
-            <tr id="outer_second">
+            <tr id="outer_second" data-locator="middle row">
                 <td id="t1_r2_c1">
                     Table 1, Row 2, Cell 1
                 </td>
@@ -98,7 +98,7 @@
                     </table>
                 </td>
             </tr>
-            <tr id="outer_last">
+            <tr id="outer_last" data-locator="last row">
                 <td>
                     Table 1, Row 3, Cell 1
                 </td>
