--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -88,7 +88,7 @@
             <label for="new_user_username">Username (max 20 characters)</label>
             <input type="text" name="new_user_username" id="new_user_username" maxlength="20" size="20" onkeyup="document.getElementById('current_length').innerHTML = this.value.length"/> <span id="current_length">0</span><br />
             <label for="new_user_password">Password</label>
-            <input type="password" name="new_user_password" id="new_user_password" /> <br />
+            <input type="password" name="new_user_password" id="new_user_password" data-locator="last text"/> <br />
             <label for="new_user_role">Role</label>
             <select name="new_user_role" id="new_user_role" disabled="disabled">
                 <option>Administrator</option>
@@ -156,7 +156,7 @@
     </form>
 
   <!-- testing popup windows  -->
-  <input type="button" name="new_popup_window" value="Open window" id="new_popup_window" onclick="window.open('tables.html')">
+  <input type="button" name="new_popup_window" value="Open window" id="new_popup_window" data-locator="last button" onclick="window.open('tables.html')">
 
   <!-- used for testing javascript events and styles -->
   <div id="changed_language" style="visibility: hidden;">
