--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -20,9 +20,9 @@
             <label for="new_user_first_name" id="first_label" onclick="WatirSpec.addMessage('label')">First name</label>
             <input name="new_user_first_name" id="new_user_first_name" class="name" data-locator="input name"/> <br />
             <label for="new_user_last_name">Last name</label>
-            <input type="no_such_type" name="new_user_last_name" id="new_user_last_name" class="name" /> <br />
+            <input type="no_such_type" name="new_user_last_name" id="new_user_last_name" class="name" data-locator="last name"/> <br />
             <label for="new_user_email">Email address</label>
-            <input type="text" name="new_user_email" id="new_user_email" data-locator="first text"/> <br />
+            <input type="text" name="new_user_email" id="new_user_email" data-locator="first text" contenteditable=""/> <br />
             <label for="new_user_email_confirm">Email address (confirmation)</label>
             <input type="Text" name="new_user_email_confirm" id="new_user_email_confirm" /> <br />
             <label for="new_user_country">Country</label>
@@ -41,7 +41,7 @@
             <label for="new_user_occupation">Occupation</label>
             <input type="text" class="c" name="new_user_occupation" data-locator="dev" id="new_user_occupation" value="Developer" onfocus="document.getElementById('onfocus_test').innerHTML = 'changed by onfocus event'"/> <br />
             <label>Without for <input /></label>
-            <label>With<span style="display:none;"> hidden</span> text<input /></label>
+            <label>With<span style="display:none;"> hidden</span> text<input data-locator="hidden" /></label>
             <label for="new_user_species">Species</label>
             <input type="text" name="new_user_species" id="new_user_species" value="Homo sapiens sapiens" disabled="disabled" /> <br />
             <label for="new_user_code">Personal code</label>
