Fix Element#obscured? for scrolling non-interactive elements

--- a/spec/watirspec/html/obscured.html
+++ b/spec/watirspec/html/obscured.html
@@ -29,6 +29,8 @@
 
     <button style="position: absolute; width: 0; height: 0; top: -500px; left: -500px; overflow: hidden" id="off_screen">off-screen</button>
     <button style="display: none;" id="hidden">hidden</button>
-    <button style="position: absolute; top: 5000px;" id="requires_scrolling">requires scrolling</button>
+    <div id="requires_scrolling_container">
+      <button style="position: absolute; top: 5000px;" id="requires_scrolling">requires scrolling</button>'
+    </div>
   </body>
 </html>
