--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -133,6 +133,7 @@
             <input type="BuTTon" name="new_user_button_preview" id="new_user_button_preview" alt="Create a new user" value="Preview" data-locator="preview"/>
             <button name="new_user_button_2" type="submit" value="button_2" data-locator="Benjamin">Button 2</button>
             <button name="new_user_button_3" value="button_3" data-locator="No Type">Button 3</button>
+            <button name="new_user_button_4" value="button_4" data-locator="child text">  Button 4  <span>  With  Child  Text  </span>  </button>
             <input type="image" class="image" name="new_user_image" src="images/button.png" alt="Submittable button" data-locator="submittable button"/>
             <input type="submit" name="new_user_submit_disabled" id="disabled_button" value="Disabled" disabled="disabled" data-locator="disabled" />
             <input type="checkbox" name="new_user_submit_disabled" id="toggle_button_checkbox" onclick="var elem = document.getElementById('disabled_button'); elem.disabled = !elem.disabled" />
