add new frame example with parent div and update existing tests

--- a/spec/watirspec/html/iframes.html
+++ b/spec/watirspec/html/iframes.html
@@ -8,5 +8,8 @@
         <h1>Iframes</h1>
         <iframe src="iframe_1.html" id="iframe_1" name="iframe1" class="half"></iframe>
         <iframe src="frame_2.html" id="iframe_2" name="iframe2" class="half"></iframe>
+    <div class="wrapper">
+        <iframe src="nested_elements.html" id="iframe_3" name="iframe3"></iframe>
+    </div>
     </body>
 </html>
