Remove unused contenteditable from test page
There is a bug in Chromedriver with the input of contenteditable elements (https://crbug.com/chromedriver/3214). As none of the tests appear to require this attribute on the text field, removing it.

--- a/spec/watirspec/html/forms_with_input_elements.html
+++ b/spec/watirspec/html/forms_with_input_elements.html
@@ -22,7 +22,7 @@
             <label for="new_user_last_name">Last name</label>
             <input type="no_such_type" name="new_user_last_name" id="new_user_last_name" class="name" data-locator="last name"/> <br />
             <label for="new_user_email">Email address</label>
-            <input type="text" name="new_user_email" id="new_user_email" data-locator="first text" contenteditable=""/> <br />
+            <input type="text" name="new_user_email" id="new_user_email" data-locator="first text"/> <br />
             <label for="new_user_email_confirm">Email address (confirmation)</label>
             <input type="Text" name="new_user_email_confirm" id="new_user_email_confirm" /> <br />
             <label for="new_user_country">Country</label>
