remove text_regexp deprecation; text and label locators with Regexp values will no longer match elements that include hidden text

--- a/spec/watirspec/html/non_control_elements.html
+++ b/spec/watirspec/html/non_control_elements.html
@@ -131,10 +131,15 @@
       <del class="footer" onclick="this.innerHTML = 'This is a del with text set by Javascript.'">This is a del.</del>
     </div>
     <div custom-attribute=custom>Custom</div>
+    <div id="visible_link">
+      <a id="all_visible_link">all visible</a>
+      <a id="some_visible_link">some visible<span style="display:none;"> some hidden</span></a>
+      <a id="no_visible_link" style="display:none;">none visible</a>
+    </div>
     <div id="visible_text">
-        <a id="all_visible_text">all visible</a>
-        <a id="some_visible_text">some visible<span style="display:none;"> some hidden</span></a>
-        <a id="no_visible_text" style="display:none;">none visible</a>
+      <div id="all_visible_text">all visible</div>
+      <div id="some_visible_text">some visible<span style="display:none;"> some hidden</span></div>
+      <div id="no_visible_text" style="display:none;">none visible</div>
     </div>
   </body>
 </html>
