allow finding elements with attributes that have non-standard xml characters. Fixes #787

--- a/spec/watirspec/html/special_chars.html
+++ b/spec/watirspec/html/special_chars.html
@@ -8,5 +8,6 @@
   <body>
       <div id='single-quote'>single 'quotes'</div>
       <div id='double-quote'>double "quotes"</div>
+      <div id='special' we{ird='foo'>attribute with non-standard XML characters</div>
   </body>
 </html>
