add spec to verify underscored attributes are not converted

--- a/spec/watirspec/html/special_chars.html
+++ b/spec/watirspec/html/special_chars.html
@@ -8,6 +8,8 @@
   <body>
       <div id='single-quote'>single 'quotes'</div>
       <div id='double-quote'>double "quotes"</div>
+      <div underscored_attribute='true'>underscored attribute</div>
       <div id='special' we{ird='foo'>attribute with non-standard XML characters</div>
+      <custom-tag id='custom_tag'>custom tag</custom-tag>
   </body>
 </html>
