add tests to ensure actions methods properly scrolling

--- a/spec/watirspec/html/scroll.html
+++ b/spec/watirspec/html/scroll.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <style media="screen">
+      div { color: blue; }
+      div:hover { color: orange; }
+    </style>
   </head>
   <body>
     <div style="height: 300%; position: relative;">
