fix bug for unexpected whitespace in classes (#956)

--- a/spec/watirspec/html/class_locator.html
+++ b/spec/watirspec/html/class_locator.html
@@ -5,5 +5,7 @@
     <div class="a b c">a b c</div>
     <div class="a b">a b</div>
     <div class="abc">abc</div>
+    <div class="first
+newline	tabbed last">tab</div>
   </body>
 </html>
